...
import '../utils/app_toast.dart';
import '../utils/friendly_error.dart';
import 'login_screen.dart';
import 'movimento_screen.dart';

const _localizacaoIcons = <String, String>{
  'ESTOQUE': 'assets/estoque.svg',
  'FROTA': 'assets/frota.svg',
  'SUCATA': 'assets/sucata.svg',
  'VENDA': 'assets/venda.svg',
  'CONSERTO': 'assets/conserto.svg',
  'RECAPAGEM': 'assets/recapagem.svg',
};

class HomeScreen extends StatefulWidget {
  final Future<List<Localizacao>> Function(String token) fetchFn;

...
